7.3 So why don't we go and grab the cubic besier function that we had created and try to apply this to the rotation, the transform properly. So we'll set the first value here to cubic beier. So now the rotation should start slow, then accelerate and finish slow. Let's take a look. Yep, it's doing the thing.  Alright, so let's try a different function I haven't even mentioned yet and it's called steps. You can think of steps as sort of a stop motion effect. So it's going to take a series of snapshots at a state in time in the transition and then jump from snapshot to snapshot. So if we had five steps, uh, and we need to specify end or start, this is just to determine if the snapshots line up from the start or the ends of the transition. So with five steps and ends, it would make snapshots at 20%, 40, 60, 80 and a hundred. The last one being the end. And if we had start, it would start at 0, 20, 40, 60, 80. But here we're going to have five steps and I will copy this. And for the last value, which is the border radius, I'm going to have three steps and let's go take a look.  But try to guess what's going to happen by reading this code. So the first uh, transition property, which is transform, will have the cubic beier animation like we've seen already. And then the second one, the background color should have five steps. So the color is going to change five times abruptly and the border radius should change three times. So we should be able to notice them. If not, I will slow the animation right down. But let's take a look. All right, let's check it out.

--- a/resources/css/css-transitions.css
+++ b/resources/css/css-transitions.css
@@ -7,9 +7,10 @@
   width: 100px;
   background-color: oklch(0.69 0.18 245.62);
   border-radius: 0.25rem;
-  transition-duration: 300ms;
+  transition-duration: 1s;
   transition-property: transform, background-color, border-radius;
-  transition-timing-function: cubic-bezier(0.87, 0, 0.08, 0.99), ease-out, ease;
+  transition-timing-function: cubic-bezier(0.87, 0, 0.08, 0.99),
+                              steps(5, end), steps(3, end);
 
   &:hover {
     transform: rotate(45deg);
